[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -239.0
margin_right = 240.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "o"
align = 1

[node name="messageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -62.0
margin_right = 210.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Dodge The Creeps"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = 62.0
margin_right = 100.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
